Migrate JDBC.NET.Bridge to Java11